Allow for conditionally syncing YNAB and/or AB using the environment variables rather than updating the python code

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ FLASK_ENV="development"
 OPENAI_API_KEY="sk- key from OpenAI for fuzzy-matching"
 YNAB_BEARER_TOKEN="QQw-key from YNAB"
 YNAB_BUDGET_ID="From the YNAB URL"
+SYNC_TO_YNAB="True"
+SYNC_TO_AB="True"
+DEBUG="False"
